k8s/services/comments-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: comments-svc
  namespace: dev
  labels:
    app: comments-svc
spec:
  selector:
    app: comments-svc
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
