k8s/services/mailer-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: mailer-svc
  namespace: dev
  labels:
    app: mailer-svc
spec:
  selector:
    app: mailer-svc
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
