k8s/services/posts-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: posts-svc
  namespace: dev
  labels:
    app: posts-svc
spec:
  selector:
    app: posts-svc
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
